--- a/css/glabal_rulse.css
+++ b/css/glabal_rulse.css
@@ -1,12 +1,11 @@
-
-
 :root {
-
     --main-color: #00c7fc;
     --border-color-header: #a2a2a2;
     --transparent-color: rgb(15 116 143 / 60%);
     --transition-ms: 800ms;
+    --section-padding: 100px
 }
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -18,16 +17,15 @@ html {
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
-    background-color: black;
+    font-family: "Open Sans", sans-serif;
 }
 
-ul {    
+ul {
     list-style: none;
-  
 }
-ul li a{
-      text-decoration: none;
+
+ul li a {
+    text-decoration: none;
 }
 
 .container {
@@ -36,23 +34,6 @@ ul li a{
     margin-left: auto;
     margin-right: auto;
 }
-
-
-
-/* small mobile  screens*/
-@media (min-width:320px) {
-    .container {
-        width: 300px;
-    } 
-}
-
-/* medium mobile  screens*/
-@media (min-width:375px) {
-    .container {
-        width: 350px;
-    } 
-} 
-
 
 /* small  screens*/
 @media (min-width: 768px) {
@@ -68,7 +49,7 @@ ul li a{
     }
 }
 
-/* Large  screens*/
+/* Large  screens */
 @media (min-width: 1200px) {
     .container {
         width: 1170px;
